[package]
name = "sublink-ink-runtime"
version = "0.0.1"
authors = ["LaurentTrk <laurent.turek@gmail.com>"]
description = "SubLink ink! extension (runtime part)"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/LaurentTrk/sublink-pallets"

[dependencies]
log = { version = "0.4", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20" }
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
pallet-contracts = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }

pallet-chainlink-feed = { git = "https://github.com/LaurentTrk/chainlink-polkadot", default-features = false,  branch = "sublink" }
sublink-parachain-oracle = { path = '../../parachain-oracle', default-features = false }
sublink-xcm = { path = '../../xcm', default-features = false }

[features]
default = ["std"]
std = [
    "log/std",
    "codec/std",
	"sp-std/std",
	"frame-system/std",
    "frame-support/std",
    "pallet-contracts/std",
    "pallet-chainlink-feed/std",
    "sublink-parachain-oracle/std",
    "sublink-xcm/std",
]